--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
   "name": "school-meal-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^6.3.2",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/viewpager": "^5.0.11",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "expo": "~46.0.9",
+    "expo-dev-client": "~1.2.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.5",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-google-mobile-ads": "^7.0.1",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
