--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/viewpager": "^5.0.11",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
-    "expo": "~46.0.9",
-    "expo-dev-client": "~1.2.1",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "expo-updates": "~0.14.5",
-    "lottie-react-native": "5.1.3",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.5",
-    "react-native-google-mobile-ads": "^7.0.1",
+    "expo": "45.0.0",
+    "expo-ads-admob": "^13.0.0",
+    "expo-dev-client": "~1.0.1",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
+    "lottie-react-native": "5.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
-    "react-native-safe-area-context": "4.3.1",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
