--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/stack": "^6.2.3",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "45.0.0",
     "expo-ads-admob": "^13.0.0",
     "expo-dev-client": "~1.0.1",
+    "expo-device": "~4.2.0",
+    "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
@@ -27,14 +30,15 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
