--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-    "API_URL": "http://192.168.0.3:3000"
+    "API_URL": "https://api.jhschool.xyz",
+    "DEV_API_URL": "http://192.168.0.3:3000"
 }
