--- a/app.json
+++ b/app.json
@@ -6,6 +6,15 @@
     "orientation": "portrait",
     "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/logo.png",
+          "color": "#ffffff"
+        }
+      ]
+    ],
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -27,14 +36,15 @@
     "android": {
       "package": "me.kimdohyun.jhschoolmeal",
       "versionCode": 4,
-      "permissions": ["com.google.android.gms.permission.AD_ID"],
+      "permissions": ["com.google.android.gms.permission.AD_ID", "NOTIFICATIONS"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#FFFFFF"
       },
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-2701426579223876~6238985306"
-      }
+      },
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/logo.png"
