--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "expo-ads-admob": "^13.0.0",
     "expo-dev-client": "~1.0.1",
     "expo-device": "~4.2.0",
+    "expo-notifications": "~0.15.4",
+    "expo-permissions": "~13.2.0",
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "~0.13.4",
+    "expo-updates": "^0.14.5",
     "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
