--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.14.5",
     "lottie-react-native": "5.0.1",
+    "punycode": "^2.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
