--- a/app.json
+++ b/app.json
@@ -2,8 +2,9 @@
   "expo": {
     "name": "재능고등학교",
     "slug": "jh-school-meal-app",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "orientation": "portrait",
+    "scheme": "jhschool",
     "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "plugins": [
@@ -22,23 +23,22 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
-      
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "me.kimdohyun.jhschoolmeal",
-      "buildNumber": "1.2.0",
+      "buildNumber": "1.3.0",
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-2701426579223876~7200427777"
       }
     },
     "android": {
       "package": "me.kimdohyun.jhschoolmeal",
-      "versionCode": 5,
+      "versionCode": 6,
       "permissions": ["com.google.android.gms.permission.AD_ID", "NOTIFICATIONS"],
       "adaptiveIcon": {
-        "foregroundImage": "./assets/logo.png",
+        "backgroundImage": "./assets/logo.png",
         "backgroundColor": "#FFFFFF"
       },
       "config": {
