--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "lottie-react-native": "5.0.1",
     "punycode": "^2.1.1",
     "react": "17.0.2",
