--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "me.kimdohyun.jhschoolmeal",
+      "googleServicesFile": "./GoogleService-Info.plist",
       "buildNumber": "1.3.0",
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-2701426579223876~7200427777"
@@ -35,7 +36,7 @@
     },
     "android": {
       "package": "me.kimdohyun.jhschoolmeal",
-      "versionCode": 6,
+      "versionCode": 7,
       "permissions": ["com.google.android.gms.permission.AD_ID", "NOTIFICATIONS"],
       "adaptiveIcon": {
         "backgroundImage": "./assets/logo.png",
