--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-ads-admob": "^13.0.0",
     "expo-dev-client": "~1.0.1",
     "expo-device": "~4.2.0",
+    "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
     "expo-notifications": "~0.15.4",
     "expo-permissions": "~13.2.0",
@@ -41,6 +42,7 @@
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "0.17.7",
     "uuid": "^8.3.2"
   },
