--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "재능고등학교",
+    "name": "인천재능고등학교",
     "slug": "jh-school-meal-app",
-    "version": "1.5.1",
+    "version": "1.5.2",
     "orientation": "portrait",
     "scheme": "jhschool",
     "icon": "./assets/logo.png",
@@ -29,14 +29,14 @@
       "supportsTablet": true,
       "bundleIdentifier": "me.kimdohyun.jhschoolmeal",
       "googleServicesFile": "./GoogleService-Info.plist",
-      "buildNumber": "1.5.1",
+      "buildNumber": "1.5.2",
       "config": {
         "googleMobileAdsAppId": "ca-app-pub-2701426579223876~7200427777"
       }
     },
     "android": {
       "package": "me.kimdohyun.jhschoolmeal",
-      "versionCode": 9,
+      "versionCode": 10,
       "permissions": ["com.google.android.gms.permission.AD_ID", "NOTIFICATIONS"],
       "adaptiveIcon": {
         "backgroundImage": "./assets/logo.png",
