--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "API_URL": "https://api.jhschool.xyz",
-    "DEV_API_URL": "http://172.20.10.5:3000"
+    "DEV_API_URL": "https://api.jhschool.xyz"
 }
