--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
