--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "API_URL": "https://api.jhschool.xyz",
-    "APP_URL": "http://10.141.40.89:3001",
+    "WEB_URL": "https://app.jhschool.xyz",
     "DEV_API_URL": "https://api.jhschool.xyz"
 }
